css/styleMain.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap');

html {
    --text-color: white;
    --bg-color: #2b2d30;
    --discription-color: #2b2d30e8;

    --icon-stroke-color: #fff;
    --icon-fill-color: #fff;

    --uib-color: #2b2d30;

    & .input-star-chart {
        background-color: #e0e0e0;
        color: #2b2d30;
    }

    & .form {
        background: #2b2d30;
        --border-color: #ffffff;
    }



}

html[data-theme="light"]>body {

    --text-color: white !important;
    --bg-color: #2b2d30 !important;
    background-color: white !important;
    --discription-color: #2b2d30 !important;
    --uib-color: #2b2d30;

    .form {
        background: #2b2d30;
        --border-color: #ffffff;
    }

    .input {
        color: white;
    }

    .beautiful-button {
        background: #2b2d30;
        color: white;
    }

    .beautiful-button:hover {
        background: linear-gradient(to bottom, #44484d, #7f858f);
    }

    .input-star-chart {
        background-color: #e0e0e0;
        color: #2b2d30;
    }

    .input-star-chart:focus {
        border-bottom: 2px solid #2b2d30;
    }

    .input-planetary-chart {
        background-color: #e0e0e0;
        color: #2b2d30;
    }

    .input-planetary-chart:focus {
        border-bottom: 2px solid #2b2d30;
    }

    .astro-mars-galley-input {
        border-color: #2b2d30;
        background: white;
    }

    .info-label {
        color: #2b2d30;
    }

    .navSpanColor {
        color: #2b2d30;
    }

    .table-everything {
        color: #2b2d30;
    }

    .gridBody {
        border: 5px solid #2b2d30;
    }

}

html[data-theme="dark"] {

    --text-color: #2b2d30 !important;
    --bg-color: white !important;
    background-color: var(--text-color);
    --discription-color: #e9e9e9 !important;
    --uib-color: white;

    & .menu-icon {
        background-image: url(/Images/richtige/menu-default_light.svg);
    }

    & .menu-icon.close {
        background-image: url(/Images/richtige/menu-close_light.svg);
    }

    .form {
        background: white;
        --border-color: #2b2d30;
    }

    .input {
        color: #2b2d30;
    }

    .beautiful-button {
        background: white;
        color: #2b2d30;
    }

    .beautiful-button:hover {
        background: linear-gradient(to bottom, #ffffff, #989fa8);
    }

    .input-star-chart {
        background-color: #ffffff;
        color: #2b2d30;
    }

    .input-star-chart:focus {
        border-bottom: 2px solid #ffffff;
    }

    .input-planetary-chart {
        background-color: #ffffff;
        color: #2b2d30;
    }

    .input-planetary-chart:focus {
        border-bottom: 2px solid #ffffff;
    }

    .info-label {
        color: white;
    }

    .navSpanColor {
        color: white;
    }

    .table-everything {
        color: white;
    }

    .gridBody {
        border: 5px solid white;
    }

    .input-div {
        background-color: #2b2d30;
    }
}

*>* {
    font-family: "Inter", sans-serif;
}

html {
    scroll-behavior: smooth;
}


.overlay {
    position: absolute;
    top: 0;
    left: 0000000;
    width: 100%;
    height: 100%;

    background-color: transparent;

    z-index: 12;
}

.everything-for-everywhere {
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    height: 100vh;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
a {
    margin: 0;
    color: var(--bg-color);
}

img {
    max-width: 100%;
}

.Header-Everything-Class {
    display: flex;
    justify-content: space-between;
    align-items: center;
    box-shadow: 0 0 14px var(--bg-color);
    margin-bottom: 14px;
}

.logo-wrap {
    display: flex;
    align-items: center;
    padding: 1rem;
}

.logo {
    width: 120px;
    border-radius: 50%;
    cursor: pointer;
}


.header-logo {
    display: block;
    font-size: 1.5em;
    margin-block-start: 0.83em;
    margin-block-end: 0.83em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    font-weight: bold;
    text-decoration: none;
    margin-left: .5rem;
}

.logo h2 {
    font-size: 2.33rem;
}

.menu-icon {
    margin-right: 2.5rem;
    width: 48px;
    height: 48px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: 100%;
    cursor: pointer;
    background-image: url(/Images/richtige/menu-default_dark.svg);
    z-index: 13;
}

.menu-icon.close {
    background-image: url(/Images/richtige/menu-close_dark.svg);
}

nav {
    background-color: var(--text-color);
    height: calc(100% - 156px);
    width: 400px;
    position: fixed;
    top: 156px;
    right: 0;
    box-shadow: 0 0 14px var(--bg-color);
    transform: translateX(calc(100% + 14px));
    transition: 0.5s;
    z-index: 99;
}

nav.open {
    transform: translateX(0);
}

nav::before {
    content: "";
    width: 100%;
    height: 40px;
    position: absolute;
    top: -30px;
    background-color: var(--text-color);
}

nav::after {
    content: "";
    width: 20px;
    height: 30px;
    position: absolute;
    top: -30px;
    left: -10px;
    background-color: var(--text-color);
    z-index: 99;
}

ul {
    list-style: none;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
}

li {
    flex-direction: column;
    display: flex;
    align-items: center;
}

li a {
    text-decoration: none;
    font-size: 1.25rem;
}

li span {
    font-size: 1.25rem;
    cursor: pointer;
    user-select: none;
}

li a:hover {
    color: #c9c9c9;
}

#subMenu {
    display: none;
}

#subMenu.showList {
    display: flex;
    margin-block: 1rem;
    gap: 0.4rem;
    font-style: italic;
}

.description {
    margin: -14px auto 14px auto;
    width: fit-content;
    background-color: var(--text-color);
    position: relative;
    box-shadow: 0 0 14px var(--bg-color);
    padding: 1rem;
    border-bottom-left-radius: 2rem;
    border-bottom-right-radius: 2rem;
    z-index: 10;
}
/* ... */

